# IPX

./: README.md
frontend/: dfx.json  package-lock.json  package.json
ipx-protocol/: Cargo.toml  dfx.json
ipx-protocol/.dfx/local/: canister_ids.json  wallets.json
ipx-protocol/.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
ipx-protocol/.dfx/network/local/state/replicated_state/: ic.json5  nns_public_key.pem  registry.proto
ipx-protocol/.dfx/network/local/state/replicated_state/node-100/: committee_signing_key  derived_node_id  idkg_mega_encryption_key  ni_dkg_dealing_encryption_key  node_signing_key  transport_tls_certificate
ipx-protocol/.dfx/network/local/state/replicated_state/node-100/crypto/: canister_sks_data.pb  public_keys.pb  sks_data.pb
ipx-protocol/.dfx/network/local/state/replicated_state/node-100/state/: states_metadata.pbuf
ipx-protocol/canisters/beamfi-stream/: Cargo.toml
ipx-protocol/canisters/beamfi-stream/src/: lib.rs
ipx-protocol/canisters/campaign-factory/: Cargo.toml
ipx-protocol/canisters/campaign-factory/src/: lib.rs
ipx-protocol/canisters/nft-registry/: Cargo.toml
ipx-protocol/canisters/nft-registry/src/: lib.rs
ipx-protocol/canisters/oracle-aggregator/: Cargo.toml
ipx-protocol/canisters/oracle-aggregator/src/: lib.rs
ipx-protocol/canisters/sns-dao/: Cargo.toml
ipx-protocol/canisters/sns-dao/src/: lib.rs
ipx-protocol/canisters/vault/: Cargo.toml
ipx-protocol/canisters/vault/src/: lib.rs
ipx-protocol/scripts/: deploy.sh
(+28 files in other folders)
